chore: add example for network

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Run Geolocation example on main.dart",
+            "name": "Run Geolocation example",
             "program": "${workspaceFolder}/packages/geolocation/example/lib/main.dart",
             "request": "launch",
             "type": "dart",
@@ -11,7 +11,16 @@
             ]
         },
         {
-            "name": "Run Sensors example on main.dart",
+            "name": "Run Network example",
+            "program": "${workspaceFolder}/packages/network/example/lib/main.dart",
+            "request": "launch",
+            "type": "dart",
+            "args": [
+                "--debug"
+            ]
+        },
+        {
+            "name": "Run Sensors example",
             "program": "${workspaceFolder}/packages/sensors/example/lib/main.dart",
             "request": "launch",
             "type": "dart",
