chore: add example for basic

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,15 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Run Basic example",
+            "program": "${workspaceFolder}/packages/basic/example/lib/main.dart",
+            "request": "launch",
+            "type": "dart",
+            "args": [
+                "--debug"
+            ]
+        },
+        {
             "name": "Run Geolocation example",
             "program": "${workspaceFolder}/packages/geolocation/example/lib/main.dart",
             "request": "launch",
