build: ignore example

--- a/melos.yaml
+++ b/melos.yaml
@@ -2,7 +2,6 @@ name: flutter_use
 
 packages:
   - packages/**
-  - example/*
 
 ide:
   intellij: true
@@ -10,10 +9,10 @@ ide:
 
 scripts:
   pub:upgrade:
-    run: melos exec -- flutter pub upgrade
+    run: melos exec --ignore="example" -- flutter pub upgrade
 
   pub:get:
-    run: melos exec -- flutter pub get
+    run: melos exec --ignore="example" -- flutter pub get
 
   analyze: melos exec -- dart analyze .
 
@@ -25,4 +24,4 @@ scripts:
     select-package:
       dir-exists:
         - test
-      ignore-scope: example
+      ignore: example
