--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "flutter_use",
+  "private": false,
   "author": "wasabeef",
   "devDependencies": {
-    "husky": "7.0.4"
+    "husky": "7.0.4",
+    "lint-staged": "12.1.3",
+    "prettier": "^2.5.1"
   },
   "scripts": {
     "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.dart": "dart format",
+    "*.@(json|yaml|yml)": [
+      "prettier --write"
+    ]
   }
 }
