--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "dart.flutterSdkPath": "~/.asdf/installs/flutter/2.8.1-stable",
-    "dart.sdkPath": "~/.asdf/installs/dart/2.15.1/dart-sdk",
+  "dart.flutterSdkPath": "~/.asdf/installs/flutter/3.0.1-stable",
+  "dart.sdkPath": "~/.asdf/installs/dart/2.17.1/dart-sdk"
 }
