--- a/melos.yaml
+++ b/melos.yaml
@@ -9,19 +9,18 @@ ide:
   vscode: true
 
 scripts:
-  pub:upgrade:
+  upgrade:
     run: melos exec -- flutter pub upgrade
 
-  pub:get:
+  get:
     run: melos exec -- flutter pub get
 
   analyze: melos exec -- dart analyze .
 
-  format: bash ./scripts/dartfmt.sh
-    
-  unit:test:
+  format: dart format .
+
+  test:
     run: |
-      melos exec -- flutter test
-    select-package:
-      dir-exists:
-        - test
+      melos exec -c 8 -- flutter test
+    packageFilters:
+      scope: flutter_use
