--- a/packages/basic/pubspec.yaml
+++ b/packages/basic/pubspec.yaml
@@ -8,15 +8,15 @@ documentation: https://github.com/wasabeef/flutter_use
 issue_tracker: https://github.com/wasabeef/flutter_use/issues
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.18.5+1
+  flutter_hooks: ^0.20.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
   mockito: ^5.3.0
