--- a/packages/geolocation/example/pubspec.yaml
+++ b/packages/geolocation/example/pubspec.yaml
@@ -5,13 +5,13 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  flutter_hooks: ^0.18.5+1
+  flutter_hooks: ^0.20.0
   geolocator: ^9.0.1
   flutter_use_geolocation:
     path: ../
@@ -19,7 +19,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
   mockito: ^5.3.0
 
 flutter:
