upgrade: bump up to 0.0.5

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,7 @@ node_modules/
 !**/ios/**/default.mode2v3
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
+
+# SpecStory
+.specstory/
+
