--- a/packages/basic/pubspec.yaml
+++ b/packages/basic/pubspec.yaml
@@ -19,5 +19,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_hooks_test: ^1.0.0
   flutter_lints: ^2.0.2
   mockito: ^5.3.0
