--- a/packages/audio/pubspec.yaml
+++ b/packages/audio/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_use_audio
 
-description: Collection of Flutter Hooks.
-version: 0.0.5
+description: Audio playback hooks for Flutter applications. Provides useAudio hook for managing audio playback with controls, state management, and position tracking.
+version: 1.0.0
 homepage: https://github.com/wasabeef/flutter_use
 repository: https://github.com/wasabeef/flutter_use
 documentation: https://github.com/wasabeef/flutter_use
