--- a/packages/basic/pubspec.yaml
+++ b/packages/basic/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_use
 
-description: Collection of Flutter Hooks.
-version: 0.0.5
+description: Essential Flutter hooks collection with 36 production-ready hooks for async operations, form management, UI interactions, and state management.
+version: 1.0.0
 homepage: https://github.com/wasabeef/flutter_use
 repository: https://github.com/wasabeef/flutter_use
 documentation: https://github.com/wasabeef/flutter_use
