--- a/packages/geolocation/pubspec.yaml
+++ b/packages/geolocation/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_use_geolocation
 
-description: Collection of Flutter Hooks.
-version: 0.0.5
+description: Geolocation hooks for Flutter applications. Provides useGeolocation hook for GPS tracking, position updates, and location-aware features with permission handling.
+version: 1.0.0
 homepage: https://github.com/wasabeef/flutter_use
 repository: https://github.com/wasabeef/flutter_use
 documentation: https://github.com/wasabeef/flutter_use
