--- a/packages/network/pubspec.yaml
+++ b/packages/network/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_use_network_state
 
-description: Collection of Flutter Hooks.
-version: 0.0.5
+description: Network connectivity hooks for Flutter applications. Provides useNetworkState hook for monitoring connection status, network type, and handling offline scenarios.
+version: 1.0.0
 homepage: https://github.com/wasabeef/flutter_use
 repository: https://github.com/wasabeef/flutter_use
 documentation: https://github.com/wasabeef/flutter_use
