--- a/packages/sensors/pubspec.yaml
+++ b/packages/sensors/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_use_sensors
 
-description: Collection of Flutter Hooks.
-version: 0.0.5
+description: Device sensor hooks for Flutter applications. Provides accelerometer, gyroscope, and magnetometer hooks for motion detection and device orientation tracking.
+version: 1.0.0
 homepage: https://github.com/wasabeef/flutter_use
 repository: https://github.com/wasabeef/flutter_use
 documentation: https://github.com/wasabeef/flutter_use
