--- a/packages/video/pubspec.yaml
+++ b/packages/video/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_use_video
 
-description: Collection of Flutter Hooks.
-version: 0.0.5
+description: Video playback hooks for Flutter applications. Provides useAssetVideo and useNetworkVideo hooks for comprehensive video player functionality and state management.
+version: 1.0.0
 homepage: https://github.com/wasabeef/flutter_use
 repository: https://github.com/wasabeef/flutter_use
 documentation: https://github.com/wasabeef/flutter_use
